git-svn-id: https://www.seasar.org/svn/sandbox/s2flex2/trunk/s2flex2@127 c2bc002a-290a-0410-b2b5-f81595976b5c